Ensure text remains visible during webfont load
Leverage the font-display CSS feature to ensure text is user-visible while webfonts are loading.

See https://developers.google.com/web/updates/2016/02/font-display

--- a/res/assets/style.less
+++ b/res/assets/style.less
@@ -19,6 +19,7 @@
 
 body {
     background-color: #FDFEFF;
+    font-display: fallback;
     font-family: 'Open Sans', sans-serif;
 }
 
